pycdf
 - VarCopy objects now carry information to help reproduce original
 - Newly-public method nelems to get number of elements in zVar
 - Fix assignment of "raw" values to EPOCH16 Attribute
 - Fix "minimum value" calculation for TT2000 types
 - istp.VariableChecks adds check for VALID/SCALE MIN/MAX Entry types
 - istp.VariableChecks adds check for DELTA attributes
 - istp.VarBundle class to copy variables, slices, and depends between CDFs

Changes in Version 0.2.1 (2019-10-02)
=====================================
datamodel
 - Allow access to attributes via "meta" property
irbempy
 - Fix compilation issues on certain systems
poppy
 - Fix bootstrapping when aggregating function has multiple outputs
pycdf
 - Allow access to attributes via "meta" property
 - Single element references now return Python types not numpy scalars
 - Fix type-guessing on numpy object arrays with no values
 - New "istp" module supporting CDFs with ISTP-compliant metadata

Changes in Version 0.2.0 (2019-06-22)
=====================================
- Many installer updates, including binary wheels for Windows
- Fix writing of configuration file on Windows
ae9ap9
 - Fix handling of gzipped files under Windows/Python2
datamodel
 - Datatypes are now explicitly preserved by function "toRecArray"
irbempy
 - Update IRBEMlib to rev616
 - Update build for compatibility with numpy>=1.16 and GCC 8
 - Update retrieval of TS07 dynamic coefficient files
pybats
 - Many small changes and bugfixes (thanks John Haiducek)
 - Fix handling of gzipped files under Windows/Python2
pycdf
 - Proper handling of type guessing for negative integers, numpy scalars, and
   object arrays.
 - Allow ... to get all gEntries
 - Allow insert, append on gAttrs
 - Properly handle reading from empty variables
 - Fix some type-guessing ordering in Python 3.6
 - Reading empty NRV variables will now return empty array (not padding)
 - Fix more cases of BAD_ENTRY_NUM when reading attribute entries